Hash Engineering on filters to prevent white spaces or lot of culprit with categories' string Extraction of filters from icons data Add binding on actions: init filters and sorters Build filters' toolbar html

--- a/src/jquery.fa-picker.css
+++ b/src/jquery.fa-picker.css
@@ -1,5 +1,7 @@
 .fa-container .fa-item{
 	background:#e67e22;
+	margin: 0.5em;
+	width: 50px;
 }
 .fa-container .fa-item a{
 	display: block;
